Quick style fix for some IE oddities regarding images in cards/modals. Now working on IE11

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,11 @@ a.anchor {
   left: -5px; 
 }
 
+/* IE Fixes */
+.modal-content * , .card * {
+  min-height: .01px;
+}
+
 @-webkit-keyframes animate-positive {
   0% {
     width: 0; 
